fixed visualize_t_onetail function

--- a/index.ipynb
+++ b/index.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
        "9.819999999999993"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -308,12 +308,12 @@
     "n_sample1 = len(control)\n",
     "n_sample2 = len(experimental)\n",
     "alpha = .95\n",
-    "visualize_t_twotail(t_stat, alpha, n_control, n_experimental)"
+    "visualize_t_twotail(t_stat, alpha, n_sample1, n_sample2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -341,15 +341,15 @@
     "    ys = stats.t.pdf(xs, (n_sample1+n_sample2-2), 0, 1)\n",
     "    ax.plot(xs, ys, color='black')\n",
     "    \n",
-    "    crit = stats.t.ppf(alpha, (n_sample1+n_sample2-2))\n",
+    "    crit = stats.t.ppf(1-alpha, (n_sample1+n_sample2-2))\n",
     "    ax.axvline((direction*crit), color='darkred')\n",
     "    ax.axvline(t_stat, color='cyan')\n",
     "    plt.show()\n",
     "\n",
     "n_sample1 = len(control)\n",
     "n_sample2 = len(experimental)\n",
-    "alpha = .95\n",
-    "visualize_t_onetail(t_stat, alpha, n_control, n_experimental)"
+    "alpha = .05\n",
+    "visualize_t_onetail(t_stat, alpha, n_sample1, n_sample2)"
    ]
   },
   {
@@ -363,17 +363,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.061713104303855494\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## Calculate p_value\n",
     "# Lower tail comulative density function returns area under the lower tail curve\n",
@@ -394,20 +386,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Ttest_indResult(statistic=-1.8915462966190273, pvalue=0.061504240672530394)"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "## your code here\n",
     "'''\n",
